@@ -1,3 +1,9 @@
+2016-09-14 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c (isLiteralBit): fixed for long long,
+	  (genReceive):	fixed stack smashing bug
+	* support/regression/tests/test-p99-conformance.c: decreased restrict_buffer
+
 2016-09-12 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/include/stdbool.h,
